sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:8: error: '(' expected but identifier found.
        if plusPetitQue(j-1,v)
           ^